[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Alphakind.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="pause_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 1.0
margin_right = 168.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Snow Wars
"
align = 1

[node name="resume_btn" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 168.0
margin_bottom = 122.0
text = "Resume"

[node name="options_btn" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 168.0
margin_bottom = 160.0
text = "Options"

[node name="quit_btn" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 168.0
margin_bottom = 198.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
